# TrantorEvolution

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compile.sh
.github/workflows/: checker.yaml  realease.yaml  to_epitech.yaml
ECS/: CMakeLists.txt
ECS/default/: CMakeLists.txt  DefaultDrawable.cpp  DefaultDrawable.hpp  DefaultEntity.cpp  DefaultEntity.hpp
ECS/include/: ECSFactory.hpp  PluginManager.hpp
ECS/include/default/: DefaultDrawable.hpp  DefaultEntity.hpp
ECS/include/interfaces/: AAnimated.hpp  ADrawable.hpp  AEntity.hpp  AInteractive.hpp  AObject.hpp  IDrawable.hpp  IEntity.hpp
ECS/src/: AAnimated.cpp  ADrawable.cpp  AEntity.cpp  AObject.cpp
ECS/src/default/: DefaultDrawable.cpp  DefaultEntity.cpp
doc/: map_handling.md  map_thread.md
gui/: CMakeLists.txt
gui/include/: Teams.hpp  maths.hpp
gui/include/audio/: SoundManage.hpp
gui/include/core/: Core.hpp  Engine.hpp  Parser.hpp
gui/include/network/: Client.hpp  Socket.hpp  events.hpp
gui/include/visual/: AAnimated.hpp  ADrawable.hpp  AEntity.hpp  AInteractive.hpp  ALayer.hpp  AMenu.hpp  AObject.hpp  AScene.hpp  Animation.hpp  Drawable.hpp  IDrawable.hpp  IEntity.hpp  ILayer.hpp  IMenu.hpp  IScene.hpp  Movement.hpp  Text.hpp  setup.hpp  visual.hpp
gui/include/visual/drawables/: Biome.hpp  Body.hpp  GrassTile.hpp  Resource.hpp  ResourceNode.hpp  Tree.hpp
gui/include/visual/entities/: Background.hpp  DefaultEntity.hpp  Egg.hpp  Hud.hpp  IncantationObject.hpp  LoadingScreen.hpp  ResourceNode.hpp  Tile.hpp  Trantorian.hpp
gui/include/visual/interfaces/: ALayer.hpp  AScene.hpp  ILayer.hpp  IScene.hpp
gui/include/visual/layers/: Background.hpp  DefaultLayer.hpp  Hud.hpp  Land.hpp
gui/include/visual/scenes/: DefaultScene.hpp  InGame.hpp  Land.hpp
gui/plugins/: CMakeLists.txt
gui/plugins/drawables/: CMakeLists.txt
gui/plugins/drawables/Biome/: Biome.cpp  Biome.hpp  CMakeLists.txt
gui/plugins/drawables/ResourceNode/: CMakeLists.txt  ResourceNode.cpp  ResourceNode.hpp
gui/plugins/entities/: CMakeLists.txt
gui/plugins/entities/Tile/: CMakeLists.txt  Tile.cpp  Tile.hpp
gui/src/: main.cpp
gui/src/audio/: SoundManage.cpp
gui/src/core/: Core.cpp  Engine.cpp  Parser.cpp
gui/src/maths/: hitbox.cpp
gui/src/network/: Client.cpp  Socket.cpp  events.cpp
gui/src/visual/: AAnimated.cpp  ADrawable.cpp  AEntity.cpp  ALayer.cpp  AMenu.cpp  AObject.cpp  AScene.cpp  Animation.cpp  Drawable.cpp  Movement.cpp  Text.cpp  setup.cpp
gui/src/visual/drawables/: Biome.cpp  Body.cpp  GrassTile.cpp  Resource.cpp  ResourceNode.cpp  Tree.cpp
gui/src/visual/entities/: Background.cpp  DefaultEntity.cpp  Egg.cpp  Hud.cpp  IncantationObject.cpp  LoadingScreen.cpp  ResourceNode.cpp  Tile.cpp  Trantorian.cpp
gui/src/visual/layers/: Background.cpp  DefaultLayer.cpp  Hud.cpp  Land.cpp
gui/src/visual/scenes/: DefaultScene.cpp  InGame.cpp  Land.cpp
ia/: CMakeLists.txt  __main__.py  action.py  client.py  ia_unitTests.py  irole.py  main.cpp  main.py  motivation.py  player.py  queen_role.py  server_manager.py  strategy.py  utils.py
ia/python/: __main__.py  server_manager.py
ia/python/src/: action.py  client.py  communication.py  cypher.py  ia_unitTests.py  macros.py  motivation.py  player.py  run_ia.py  server_manager.py  stones.py  strategy.py  utils.py
ia/python/src/roles/: base_role.py  foreman.py  kamikaze.py  map_memory.py  matriarch.py  nobody.py  queen.py  role_map.py  worker.py
ia/roles/: base_role.py  foreman.py  kamikaze.py  matriarch.py  queen.py  role_map.py  worker.py
include/: map_tools.h  projectTools.hpp  project_tools.h
server/: CMakeLists.txt
server/include/: actions.h  app.h  args.h  buffout.h  commands.h  connection.h  debug.h  default.h  eject.h  fdarray.h  functions.h  game.h  items.h  look.h  macros.h  map.h  pos.h  serverdata.h  structs.h  team.h  threads.h  transmission.h  utils.h
server/include/commands/: broadcast.h  incantation.h  look.h
server/src/: actions.c  args.c  commands.c  connection.c  debug.c  end.c  init_game.c  loop.c  main.c  player.c  returnwitherror.c  setup.c  timer.c  transmission.c  usage.c
server/src/app/: args.c
server/src/clients/: actions.c  check_clients.c  commands.c  parse_data.c  set_team.c
server/src/clients/ai/: check_ai_client.c
server/src/clients/gui/: check_gui_client.c
server/src/clients/unknown/: check_unknown_client.c
server/src/commands/: bct.c  idn.c  mct.c  msz.c  tna.c
server/src/commands/ai/: broadcast.c  connect_nbr.c  eject.c  fork.c  forward.c  incantation.c  incantation_end.c  inventory.c  left.c  look.c  look_utils.c  right.c  set.c  take.c
server/src/commands/gui/: bct.c  bio.c  mct.c  msz.c  pin.c  plv.c  pnw.c  ppo.c  send_guis.c  sgt.c  sst.c  tna.c
server/src/game/: init_game.c  player.c
server/src/game/map_thread/: get.c  init_map.c  init_thread.c  perlin.c  status.c
server/src/map_thread/: init_map.c  init_thread.c
server/src/network/: connection.c  end.c  loop.c  setup.c  threads.c  transmission.c
server/src/utils/: debug.c  returnwitherror.c  timer.c
server/test_client/: main.c
src/: main.cpp
ui/: CMakeLists.txt
ui/include/core/: Core.hpp  Window.hpp
ui/src/: main.cpp
ui/src/core/: Core.cpp  Window.cpp
